(list-group) primary implementation

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1,1 +1,10 @@
 // Here you can add other styles
+.text-expense {
+  text-align: right;
+}
+
+.outline-class {
+  outline-color: #6f42c1;
+  outline-style: solid;
+  outline-width: medium;
+}
