--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -8,3 +8,13 @@
   outline-style: solid;
   outline-width: medium;
 }
+
+.container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.flexbox-item {
+  flex-grow: 1;
+}
